#203 fix layout issue

--- a/app/assets/stylesheets/partials/_courses.scss
+++ b/app/assets/stylesheets/partials/_courses.scss
@@ -222,6 +222,7 @@ $course-img-height: 250px;
 }
 
 .courses-wrapper {
+  overflow: auto;
 
   .courses {
     @include white-box;
